Fixed content overflow in document view & list

--- a/src/components/tagSelector/style.css
+++ b/src/components/tagSelector/style.css
@@ -1,3 +1,8 @@
+.selector {
+    height: calc(100% - 50px);
+    overflow-y: auto;
+}
+
 .input {
     padding: 0 20px;
     width: 100%;
