--- a/src/views/documentList/style.css
+++ b/src/views/documentList/style.css
@@ -26,3 +26,8 @@
 .button {
     composes: button from 'commonCss/grid.css';
 }
+
+.documents {
+    overflow-y: auto;
+    height: calc(100% - 50px);
+}
